# rustic_rover2

./: Cargo.toml  README.md  run.sh
.github/workflows/: rust.yml
config/: A01.yaml  A02.yaml  default.yaml  hakobudake.yaml
src/: game_controller.rs  lib.rs  main.rs  message.rs  packet_creator.rs  serial.rs  thread.rs  view_utils.rs
src/game_controller/: dualsense.rs  dualshock4.rs  interface.rs
