[package]
name = "rustic_rover2"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {version="0.12.1", features=["image", "canvas"]}
iced_aw = { version = "0.9.0", default-features = false, features=["tabs", "icons", "number_input"]}
iced_audio = "0.8"

tokio = {version = "1", features=["full"]}
gilrs = "0.10.9"
serialport = "4.2.0"